syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ArthurWang23/miniblog/pkg/api/apiserver/v1;v1";

message User {
    string userID =1;
    string username =2;
    string nickname = 3;
    string email = 4;
    string phone = 5;
    int64 postCount = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}
// 登录请求
message LoginRequest {
    string username = 1;
    string password = 2;
}
// 表示登录响应
message LoginResponse {
    // token表示返回的身份验证令牌
    string token = 1;

    google.protobuf.Timestamp expireAt = 2;
}
// 刷新令牌请求
message RefreshTokenRequest {
    // 无需额外字段，仅通过现有的认证信息刷新
}

message RefreshTokenResponse {
    string token = 1;
    google.protobuf.Timestamp expireAt = 2;
}

message ChangePasswordRequest {
    string userID = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message ChangePasswordResponse {
}

message CreateUserRequest{
    string username = 1;
    string password = 2;
    optional string nickname = 3;
    string email = 4;
    string phone = 5;
}

message CreateUserResponse {
    string userID = 1;
}

message UpdateUserRequest{
    string userID = 1;
    optional string username = 2;
    optional string nickname = 3;
    optional string email = 4;
    optional string phone = 5;
}

message UpdateUserResponse {
}

message DeleteUserRequest{
    // @gotags: uri:"userID"
    string userID = 1;
}
message DeleteUserResponse {
}

message GetUserRequest{
    // @gotags: uri:"userID"
    string userID = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersRequest{
    // @gotags: form:"offset"
    int64 offset = 1;
    // @gotags: form:"limit"
    int64 limit = 2;
}

message ListUsersResponse {
    int64 totalCount = 1;
    repeated User users = 2;
}
